все работает кроме статуса 2

--- a/app_conf.json
+++ b/app_conf.json
@@ -8,9 +8,9 @@
     "service_url": null,
     "font_size": "10",
     "object_name1": "Объект обработки TKO, г. Бузулук",
-    "object_id1": "",
+    "object_id1": "dbdaaac9-1c07-4eda-ad43-29f544570309",
     "object_name2": "Полигон ТБО, г. Бузулук",
-    "object_id2": "",
+    "object_id2": "93009fd0-af73-48b2-af31-046e36a29b69",
     "object_url": "https://httpbin.org/post",
     "font_family": "Arial"
 }
