--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask>=2.2.5
-fdb==2.0.1
+flask==2.0.1
+fdb==2.0.2
 requests==2.26.0
-python-dateutil==2.8.2
-flask-sqlalchemy==3.1.1 
+tkcalendar==1.6.1
+pyinstaller==5.13.0 
